syntax = "proto3";

package com.coralogix.metrics.metrics_configurator;

import "google/protobuf/empty.proto";

message RetentionPolicy {
  int32 resolution = 1;
  int32 retention_days = 2;
}

message S3Config {
  string bucket = 1;
  string region = 2;
}

message IbmConfig {
  string bucket = 1;
  string region = 2;
  string endpoint = 3;
  string crn = 4;
}

message IbmConfigV2 {
  // Endpoint to use to access the bucket
  string endpoint = 3;
  // Cloud Object Storage bucket CRN
  string crn = 4;
  // A CRN of a service instance which will be storing data in the bucket.
  // Team ID is comming in AuthContext
  string service_crn = 5;
}

message TenantConfigV2 {
  uint32 tenant_id = 1;
  RetentionPolicyRequest retention_policy = 4;
  oneof storage_config {
    IbmConfigV2 ibm = 5;
    S3Config s3 = 6;
  }
  string prefix = 7;
  bool disabled = 9;
}

message ConfigureTenantRequest {
  RetentionPolicyRequest retention_policy = 1;
  oneof storage_config {
    IbmConfigV2 ibm = 2;
    S3Config s3 = 3;
  }
}

message UpdateRequest {
  optional uint32 retention_days = 1;
  oneof storage_config {
    IbmConfigV2 ibm = 2;
    S3Config s3 = 3;
  }
}

message InternalUpdateRequest {
  uint32 tenant_id = 1;
  optional uint32 retention_days = 2;
  oneof storage_config {
    IbmConfigV2 ibm = 3;
    S3Config s3 = 4;
  }
}

message ValidateBucketRequest {
  oneof storage_config {
    IbmConfigV2 ibm = 1;
    S3Config s3 = 2;
  }
}

message RetentionPolicyRequest {
  uint32 raw_resolution = 1;
  uint32 five_minutes_resolution = 2;
  uint32 one_hour_resolution = 3;
}

message TenantConfig {
  uint32 tenant_id = 1;
  string bucket_name = 2 [deprecated = true];
  string region = 3 [deprecated = true];
  repeated RetentionPolicy retention_policy = 4;
  oneof storage_config {
    IbmConfig ibm = 5;
    S3Config s3 = 6;
  }
  string prefix = 7;
  uint32 index_version = 8;
  bool disabled = 9;
}

message GetTenantConfigRequest {
  uint32 tenant_id = 1;
}

message GetTenantConfigResponse {
  TenantConfig tenant_config = 1;
}

message GetTenantConfigResponseV2 {
  TenantConfigV2 tenant_config = 1;
}

message ListTenantConfigsRequest {}

message ListTenantConfigsResponse {
  repeated TenantConfig tenant_configs = 1;
}

message HotStoreConfig {
  uint32 tenant_id = 1;
  string cluster_name = 2;
}

message MigrateTenantRequest {
  uint32 tenant_id = 1;
}

message ListHotStoreConfigsRequest {}
message ListHotStoreConfigsResponse {
  repeated HotStoreConfig configs = 1;
}

service MetricsConfiguratorPublicService {
  rpc ConfigureTenant(ConfigureTenantRequest) returns (google.protobuf.Empty) {}
  rpc Update(UpdateRequest) returns (google.protobuf.Empty) {}
  rpc ValidateBucket(ValidateBucketRequest) returns (google.protobuf.Empty) {}
  rpc GetTenantConfig(google.protobuf.Empty) returns (GetTenantConfigResponseV2) {}
  rpc EnableArchive(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc DisableArchive(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

service MetricsConfiguratorService {
  rpc GetTenantConfig(GetTenantConfigRequest) returns (GetTenantConfigResponse) {}
  rpc ListTenantConfigs(ListTenantConfigsRequest) returns (ListTenantConfigsResponse) {}
  rpc ListHostStoreConfigs(ListHotStoreConfigsRequest) returns (ListHotStoreConfigsResponse) {}
  rpc MigrateTenant(MigrateTenantRequest) returns (google.protobuf.Empty) {}
  rpc Update(InternalUpdateRequest) returns (google.protobuf.Empty) {}
}
